@@ -43,6 +43,7 @@ Tommy 5.00 (unofficial MOD)
 
 Clones:
 Laser Cue L-3 (Neverending Bell Fix)
+Lost in Space (1.01 French)
 Stargate rev.5
 Star God (alternate version)
 
